kubernetes/apps/base/kguardian/kguardian/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kguardian
  namespace: kguardian
spec:
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  hostnames:
    - 'kguardian.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: kguardian-frontend
          port: 5173
          weight: 100
