kubernetes/apps/base/kguardian/kguardian/app/virtualservice.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.raspbernetes.com/networking.istio.io/virtualservice_v1beta1.json
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kguardian
  namespace: kguardian
  annotations:
    external-dns.alpha.kubernetes.io/target: '${CLOUDFLARED_INGRESS_DOMAIN}'
    external-dns.alpha.kubernetes.io/external: 'false'
spec:
  hosts:
    - 'kguardian.${CLUSTER_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 5173
            host: kguardian-frontend.kguardian.svc.cluster.local
          weight: 100
